UML diagramm finished